compiler/src/compiler_parser.output
Nonterminals useless in grammar

   ELIPSIS


Terminals unused in grammar

   T_NORM_FLOAT
   T_EXP_FLOAT


Rules useless in grammar

  233 ELIPSIS: T_DOT T_DOT T_DOT


State 348 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: TRANSLATION_UNIT

    2 TRANSLATION_UNIT: EXTERNAL_DECLARATION
    3                 | TRANSLATION_UNIT EXTERNAL_DECLARATION

    4 EXTERNAL_DECLARATION: FUNCTION_DECLARATION
    5                     | DECLARATION

    6 FUNCTION_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
    7                     | DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT
    8                     | DECLARATOR COMPOUND_STATEMENT
    9                     | DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT

   10 STATEMENT: LABELED_STATEMENT
   11          | COMPOUND_STATEMENT
   12          | EXPRESSION_STATEMENT
   13          | SELECTION_STATEMENT
   14          | ITERATION_STATEMENT
   15          | JUMP_STATEMENT

   16 LABELED_STATEMENT: IDENTIFIER T_COLON STATEMENT
   17                  | CASE CONSTANT_EXPRESSION T_COLON STATEMENT
   18                  | DEFAULT T_COLON STATEMENT

   19 DEFAULT: T_DEFAULT

   20 CASE: T_CASE

   21 COMPOUND_STATEMENT: T_LCURLY_BRACKET DECLARATION_LIST STATEMENT_LIST T_RCURLY_BRACKET
   22                   | T_LCURLY_BRACKET STATEMENT_LIST T_RCURLY_BRACKET
   23                   | T_LCURLY_BRACKET DECLARATION_LIST T_RCURLY_BRACKET
   24                   | T_ECURLY_BRACKETS

   25 DECLARATION_LIST: DECLARATION
   26                 | DECLARATION_LIST DECLARATION

   27 STATEMENT_LIST: STATEMENT
   28               | STATEMENT_LIST STATEMENT

   29 EXPRESSION_STATEMENT: EXPR T_SEMICOLON
   30                     | T_SEMICOLON

   31 SELECTION_STATEMENT: IF T_LBRACKET EXPR T_RBRACKET STATEMENT
   32                    | IF T_LBRACKET EXPR T_RBRACKET STATEMENT ELSE STATEMENT
   33                    | SWITCH T_LBRACKET EXPR T_RBRACKET STATEMENT

   34 SWITCH: T_SWITCH

   35 IF: T_IF

   36 ELSE: T_ELSE

   37 ITERATION_STATEMENT: WHILE T_LBRACKET EXPR T_RBRACKET STATEMENT
   38                    | DO STATEMENT WHILE T_LBRACKET EXPR T_RBRACKET T_SEMICOLON
   39                    | FOR T_LBRACKET EXPR T_SEMICOLON EXPR T_SEMICOLON EXPR T_RBRACKET STATEMENT
   40                    | FOR T_LBRACKET T_SEMICOLON EXPR T_SEMICOLON EXPR T_RBRACKET STATEMENT
   41                    | FOR T_LBRACKET EXPR T_SEMICOLON T_SEMICOLON EXPR T_RBRACKET STATEMENT
   42                    | FOR T_LBRACKET EXPR T_SEMICOLON EXPR T_SEMICOLON T_RBRACKET STATEMENT
   43                    | FOR T_LBRACKET T_SEMICOLON T_SEMICOLON EXPR T_RBRACKET STATEMENT
   44                    | FOR T_LBRACKET T_SEMICOLON EXPR T_SEMICOLON T_RBRACKET STATEMENT
   45                    | FOR T_LBRACKET EXPR T_SEMICOLON T_SEMICOLON T_RBRACKET STATEMENT
   46                    | FOR T_LBRACKET T_SEMICOLON T_SEMICOLON T_RBRACKET STATEMENT

   47 FOR: T_FOR

   48 WHILE: T_WHILE

   49 DO: T_DO

   50 JUMP_STATEMENT: T_CONTINUE T_SEMICOLON
   51               | T_BREAK T_SEMICOLON
   52               | RETURN EXPR T_SEMICOLON
   53               | RETURN T_SEMICOLON

   54 RETURN: T_RETURN

   55 PRIMARY_EXPRESSION: IDENTIFIER
   56                   | CONSTANT
   57                   | T_STRING
   58                   | T_LBRACKET EXPR T_RBRACKET

   59 CONSTANT: T_DEC_INT
   60         | T_OCTAL_INT
   61         | T_HEX_INT

   62 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
   63                   | POSTFIX_EXPRESSION T_LSQ_BRACKET EXPR T_RSQ_BRACKET
   64                   | POSTFIX_EXPRESSION T_EMPTY_BRACKETS
   65                   | POSTFIX_EXPRESSION T_LBRACKET ARGUMENT_EXPRESSION_LIST T_RBRACKET
   66                   | POSTFIX_EXPRESSION T_DOT IDENTIFIER
   67                   | POSTFIX_EXPRESSION T_ARROW IDENTIFIER
   68                   | POSTFIX_EXPRESSION T_INCREMENT
   69                   | POSTFIX_EXPRESSION T_DECREMENT

   70 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
   71                         | ARGUMENT_EXPRESSION_LIST T_COMMA ASSIGNMENT_EXPRESSION

   72 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   73                 | T_INCREMENT UNARY_EXPRESSION
   74                 | T_DECREMENT UNARY_EXPRESSION
   75                 | UNARY_OPERATOR CAST_EXPRESSION
   76                 | SIZE_OF UNARY_EXPRESSION
   77                 | SIZE_OF T_LBRACKET TYPE_NAME T_RBRACKET

   78 SIZE_OF: T_SIZEOF

   79 UNARY_OPERATOR: T_AND
   80               | T_TIMES
   81               | T_PLUS
   82               | T_MINUS
   83               | T_BITWISE_NOT
   84               | T_LOGICAL_NOT

   85 CAST_EXPRESSION: UNARY_EXPRESSION
   86                | T_LBRACKET TYPE_NAME T_RBRACKET CAST_EXPRESSION

   87 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   88                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
   89                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
   90                          | MULTIPLICATIVE_EXPRESSION T_MODULO CAST_EXPRESSION

   91 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   92                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   93                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   94 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   95                 | SHIFT_EXPRESSION T_LEFT_SHIFT ADDITIVE_EXPRESSION
   96                 | SHIFT_EXPRESSION T_RIGHT_SHIFT ADDITIVE_EXPRESSION

   97 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   98                      | RELATIONAL_EXPRESSION T_LESS_THAN SHIFT_EXPRESSION
   99                      | RELATIONAL_EXPRESSION T_GREATER_THAN SHIFT_EXPRESSION
  100                      | RELATIONAL_EXPRESSION T_LESS_THAN_OR_EQUAL_TO SHIFT_EXPRESSION
  101                      | RELATIONAL_EXPRESSION T_GREATER_THAN_OR_EQUAL_TO SHIFT_EXPRESSION

  102 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
  103                    | EQUALITY_EXPRESSION T_EQUALS_EQUALS RELATIONAL_EXPRESSION
  104                    | EQUALITY_EXPRESSION T_NOT_EQUALS_EQUALS RELATIONAL_EXPRESSION

  105 AND_EXPRESSION: EQUALITY_EXPRESSION
  106               | AND_EXPRESSION T_AND EQUALITY_EXPRESSION

  107 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
  108                        | EXCLUSIVE_OR_EXPRESSION T_EXPONENT AND_EXPRESSION

  109 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
  110                        | INCLUSIVE_OR_EXPRESSION T_OR EXCLUSIVE_OR_EXPRESSION

  111 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
  112                       | LOGICAL_AND_EXPRESSION T_AND_AND INCLUSIVE_OR_EXPRESSION

  113 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
  114                      | LOGICAL_OR_EXPRESSION T_OR_OR LOGICAL_AND_EXPRESSION

  115 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
  116                       | LOGICAL_OR_EXPRESSION T_QUESTION EXPR T_COLON CONDITIONAL_EXPRESSION

  117 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
  118                      | UNARY_EXPRESSION ASSIGNMENT_OPERATOR ASSIGNMENT_EXPRESSION

  119 ASSIGNMENT_OPERATOR: T_EQUALS
  120                    | T_TIMES_EQUALS
  121                    | T_DIVIDE_EQUALS
  122                    | T_MODULO_EQUALS
  123                    | T_PLUS_EQUALS
  124                    | T_MINUS_EQUALS
  125                    | T_LEFT_SHIFT_EQUALS
  126                    | T_RIGHT_SHIFT_EQUALS
  127                    | T_AND_EQUALS
  128                    | T_XOR_EQUALS
  129                    | T_OR_EQUALS

  130 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

  131 EXPR: ASSIGNMENT_EXPRESSION
  132     | EXPR T_COMMA ASSIGNMENT_EXPRESSION

  133 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON
  134            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SEMICOLON

  135 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER
  136                       | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS
  137                       | TYPE_SPECIFIER
  138                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS
  139                       | TYPE_QUALIFIER
  140                       | TYPE_QUALIFIER DECLARATION_SPECIFIERS

  141 INIT_DECLARATOR_LIST: INIT_DECLARATOR
  142                     | INIT_DECLARATOR_LIST T_COMMA INIT_DECLARATOR

  143 INIT_DECLARATOR: DECLARATOR
  144                | DECLARATOR T_EQUALS INITIALIZER

  145 STORAGE_CLASS_SPECIFIER: T_TYPEDEF
  146                        | T_EXTERN
  147                        | T_STATIC
  148                        | T_AUTO
  149                        | T_REGISTER

  150 TYPE_SPECIFIER: T_VOID
  151               | T_CHAR
  152               | T_SHORT
  153               | T_INT
  154               | T_LONG
  155               | T_FLOAT
  156               | T_DOUBLE
  157               | T_SIGNED
  158               | T_UNSIGNED
  159               | STRUCT_OR_UNION_SPECIFIER
  160               | ENUM_SPECIFIER
  161               | TYPEDEF_NAME

  162 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION IDENTIFIER
  163                          | STRUCT_OR_UNION T_LCURLY_BRACKET STRUCT_DECLARATION_LIST T_RCURLY_BRACKET
  164                          | STRUCT_OR_UNION IDENTIFIER T_LCURLY_BRACKET STRUCT_DECLARATION_LIST T_RCURLY_BRACKET

  165 STRUCT_OR_UNION: T_STRUCT

  166 STRUCT_DECLARATION_LIST: STRUCT_DECLARATION
  167                        | STRUCT_DECLARATION_LIST STRUCT_DECLARATION

  168 STRUCT_DECLARATION: SPECIFIER_QUALIFIER_LIST STRUCT_DECLARATOR_LIST

  169 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER
  170                         | TYPE_SPECIFIER SPECIFIER_QUALIFIER_LIST
  171                         | TYPE_QUALIFIER
  172                         | TYPE_QUALIFIER SPECIFIER_QUALIFIER_LIST

  173 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
  174                       | STRUCT_DECLARATOR_LIST T_COMMA STRUCT_DECLARATOR

  175 STRUCT_DECLARATOR: DECLARATOR
  176                  | DECLARATOR T_COLON CONSTANT_EXPRESSION
  177                  | T_COLON CONSTANT_EXPRESSION

  178 ENUM_SPECIFIER: ENUM IDENTIFIER
  179               | ENUM IDENTIFIER T_LCURLY_BRACKET ENUMERATOR_LIST T_RCURLY_BRACKET
  180               | ENUM T_LCURLY_BRACKET ENUMERATOR_LIST T_RCURLY_BRACKET

  181 ENUM: T_ENUM

  182 ENUMERATOR_LIST: ENUMERATOR
  183                | ENUMERATOR_LIST T_COMMA ENUMERATOR

  184 ENUMERATOR: ENUM_CONSTANT
  185           | ENUM_CONSTANT T_EQUALS CONSTANT_EXPRESSION

  186 ENUM_CONSTANT: T_ENUM_CONSTANT

  187 TYPE_QUALIFIER: T_VOLATILE

  188 DECLARATOR: DIRECT_DECLARATOR
  189           | POINTER DIRECT_DECLARATOR

  190 DIRECT_DECLARATOR: IDENTIFIER
  191                  | T_LBRACKET DECLARATOR T_RBRACKET
  192                  | DIRECT_DECLARATOR T_ESQ_BRACKETS
  193                  | DIRECT_DECLARATOR T_LSQ_BRACKET CONSTANT_EXPRESSION T_RSQ_BRACKET
  194                  | DIRECT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
  195                  | DIRECT_DECLARATOR T_EMPTY_BRACKETS
  196                  | DIRECT_DECLARATOR T_LBRACKET IDENTIFIER_LIST T_RBRACKET

  197 POINTER: DEREFERENCE
  198        | DEREFERENCE TYPE_QUALIFIER_LIST
  199        | DEREFERENCE POINTER
  200        | DEREFERENCE TYPE_QUALIFIER_LIST POINTER

  201 DEREFERENCE: T_DEREFERENCE

  202 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER
  203                    | TYPE_QUALIFIER_LIST TYPE_QUALIFIER

  204 PARAMETER_TYPE_LIST: PARAMETER_LIST

  205 PARAMETER_LIST: PARAMETER_DECLARATION
  206               | PARAMETER_LIST T_COMMA PARAMETER_DECLARATION

  207 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR
  208                      | DECLARATION_SPECIFIERS
  209                      | DECLARATION_SPECIFIERS ABSTRACT_DECLARATOR

  210 IDENTIFIER_LIST: IDENTIFIER
  211                | IDENTIFIER_LIST T_COMMA IDENTIFIER

  212 IDENTIFIER: T_IDENTIFIER

  213 TYPE_NAME: SPECIFIER_QUALIFIER_LIST
  214          | SPECIFIER_QUALIFIER_LIST ABSTRACT_DECLARATOR

  215 ABSTRACT_DECLARATOR: POINTER
  216                    | POINTER DIRECT_ABSTRACT_DECLARATOR
  217                    | DIRECT_ABSTRACT_DECLARATOR

  218 DIRECT_ABSTRACT_DECLARATOR: T_LBRACKET ABSTRACT_DECLARATOR T_RBRACKET
  219                           | DIRECT_ABSTRACT_DECLARATOR T_LSQ_BRACKET CONSTANT_EXPRESSION T_RSQ_BRACKET
  220                           | T_LSQ_BRACKET CONSTANT_EXPRESSION T_RSQ_BRACKET
  221                           | DIRECT_ABSTRACT_DECLARATOR T_ESQ_BRACKETS
  222                           | T_ESQ_BRACKETS
  223                           | DIRECT_ABSTRACT_DECLARATOR T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
  224                           | T_LBRACKET PARAMETER_TYPE_LIST T_RBRACKET
  225                           | DIRECT_ABSTRACT_DECLARATOR T_EMPTY_BRACKETS
  226                           | T_EMPTY_BRACKETS

  227 TYPEDEF_NAME: T_CUSTOM_TYPE

  228 INITIALIZER: ASSIGNMENT_EXPRESSION
  229            | T_LCURLY_BRACKET INITIALIZER_LIST T_RCURLY_BRACKET
  230            | T_LCURLY_BRACKET INITIALIZER_LIST T_COMMA T_RCURLY_BRACKET

  231 INITIALIZER_LIST: INITIALIZER
  232                 | INITIALIZER_LIST T_COMMA INITIALIZER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_AUTO (258) 148
T_BREAK (259) 51
T_CASE (260) 20
T_CHAR (261) 151
T_CONTINUE (262) 50
T_DEFAULT (263) 19
T_DO (264) 49
T_DOUBLE (265) 156
T_ELSE (266) 36
T_ENUM (267) 181
T_EXTERN (268) 146
T_FLOAT (269) 155
T_FOR (270) 47
T_IF (271) 35
T_INT (272) 153
T_LONG (273) 154
T_REGISTER (274) 149
T_RETURN (275) 54
T_SHORT (276) 152
T_SIGNED (277) 157
T_SIZEOF (278) 78
T_STATIC (279) 147
T_STRUCT (280) 165
T_SWITCH (281) 34
T_TYPEDEF (282) 145
T_UNSIGNED (283) 158
T_VOID (284) 150
T_VOLATILE (285) 187
T_WHILE (286) 48
T_TIMES (287) 80 88
T_DIVIDE (288) 89
T_PLUS (289) 81 92
T_MINUS (290) 82 93
T_EXPONENT (291) 108
T_DECREMENT (292) 69 74
T_INCREMENT (293) 68 73
T_LESS_THAN (294) 98
T_GREATER_THAN (295) 99
T_EQUALS (296) 119 144 185
T_AND (297) 79 106
T_OR (298) 110
T_BITWISE_NOT (299) 83
T_LOGICAL_NOT (300) 84
T_AND_AND (301) 112
T_OR_OR (302) 114
T_MODULO_EQUALS (303) 122
T_LEFT_SHIFT_EQUALS (304) 125
T_RIGHT_SHIFT_EQUALS (305) 126
T_NOT_EQUALS_EQUALS (306) 104
T_EQUALS_EQUALS (307) 103
T_PLUS_EQUALS (308) 123
T_MINUS_EQUALS (309) 124
T_TIMES_EQUALS (310) 120
T_DIVIDE_EQUALS (311) 121
T_LESS_THAN_OR_EQUAL_TO (312) 100
T_GREATER_THAN_OR_EQUAL_TO (313) 101
T_AND_EQUALS (314) 127
T_OR_EQUALS (315) 129
T_XOR_EQUALS (316) 128
T_ARROW (317) 67
T_RIGHT_SHIFT (318) 96
T_LEFT_SHIFT (319) 95
T_MODULO (320) 90
T_COMMA (321) 71 132 142 174 183 206 211 230 232
T_DOT (322) 66
T_COLON (323) 16 17 18 116 176 177
T_SEMICOLON (324) 29 30 38 39 40 41 42 43 44 45 46 50 51 52 53 133
    134
T_QUESTION (325) 116
T_LBRACKET (326) 31 32 33 37 38 39 40 41 42 43 44 45 46 58 65 77 86
    191 194 196 218 223 224
T_RBRACKET (327) 31 32 33 37 38 39 40 41 42 43 44 45 46 58 65 77 86
    191 194 196 218 223 224
T_LSQ_BRACKET (328) 63 193 219 220
T_RSQ_BRACKET (329) 63 193 219 220
T_RCURLY_BRACKET (330) 21 22 23 163 164 179 180 229 230
T_LCURLY_BRACKET (331) 21 22 23 163 164 179 180 229 230
T_EMPTY_BRACKETS (332) 64 195 225 226
T_ECURLY_BRACKETS (333) 24
T_ESQ_BRACKETS (334) 192 221 222
T_IDENTIFIER (335) 212
T_STRING (336) 57
T_DEC_INT (337) 59
T_OCTAL_INT (338) 60
T_HEX_INT (339) 61
T_NORM_FLOAT (340)
T_EXP_FLOAT (341)
T_DEREFERENCE (342) 201
T_CUSTOM_TYPE (343) 227
T_ENUM_CONSTANT (344) 186


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
PROGRAM (91)
    on left: 1, on right: 0
TRANSLATION_UNIT (92)
    on left: 2 3, on right: 1 3
EXTERNAL_DECLARATION (93)
    on left: 4 5, on right: 2 3
FUNCTION_DECLARATION (94)
    on left: 6 7 8 9, on right: 4
STATEMENT (95)
    on left: 10 11 12 13 14 15, on right: 16 17 18 27 28 31 32 33 37
    38 39 40 41 42 43 44 45 46
LABELED_STATEMENT (96)
    on left: 16 17 18, on right: 10
DEFAULT (97)
    on left: 19, on right: 18
CASE (98)
    on left: 20, on right: 17
COMPOUND_STATEMENT (99)
    on left: 21 22 23 24, on right: 6 7 8 9 11
DECLARATION_LIST (100)
    on left: 25 26, on right: 6 9 21 23 26
STATEMENT_LIST (101)
    on left: 27 28, on right: 21 22 28
EXPRESSION_STATEMENT (102)
    on left: 29 30, on right: 12
SELECTION_STATEMENT (103)
    on left: 31 32 33, on right: 13
SWITCH (104)
    on left: 34, on right: 33
IF (105)
    on left: 35, on right: 31 32
ELSE (106)
    on left: 36, on right: 32
ITERATION_STATEMENT (107)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 14
FOR (108)
    on left: 47, on right: 39 40 41 42 43 44 45 46
WHILE (109)
    on left: 48, on right: 37 38
DO (110)
    on left: 49, on right: 38
JUMP_STATEMENT (111)
    on left: 50 51 52 53, on right: 15
RETURN (112)
    on left: 54, on right: 52 53
PRIMARY_EXPRESSION (113)
    on left: 55 56 57 58, on right: 62
CONSTANT (114)
    on left: 59 60 61, on right: 56
POSTFIX_EXPRESSION (115)
    on left: 62 63 64 65 66 67 68 69, on right: 63 64 65 66 67 68 69
    72
ARGUMENT_EXPRESSION_LIST (116)
    on left: 70 71, on right: 65 71
UNARY_EXPRESSION (117)
    on left: 72 73 74 75 76 77, on right: 73 74 76 85 118
SIZE_OF (118)
    on left: 78, on right: 76 77
UNARY_OPERATOR (119)
    on left: 79 80 81 82 83 84, on right: 75
CAST_EXPRESSION (120)
    on left: 85 86, on right: 75 86 87 88 89 90
MULTIPLICATIVE_EXPRESSION (121)
    on left: 87 88 89 90, on right: 88 89 90 91 92 93
ADDITIVE_EXPRESSION (122)
    on left: 91 92 93, on right: 92 93 94 95 96
SHIFT_EXPRESSION (123)
    on left: 94 95 96, on right: 95 96 97 98 99 100 101
RELATIONAL_EXPRESSION (124)
    on left: 97 98 99 100 101, on right: 98 99 100 101 102 103 104
EQUALITY_EXPRESSION (125)
    on left: 102 103 104, on right: 103 104 105 106
AND_EXPRESSION (126)
    on left: 105 106, on right: 106 107 108
EXCLUSIVE_OR_EXPRESSION (127)
    on left: 107 108, on right: 108 109 110
INCLUSIVE_OR_EXPRESSION (128)
    on left: 109 110, on right: 110 111 112
LOGICAL_AND_EXPRESSION (129)
    on left: 111 112, on right: 112 113 114
LOGICAL_OR_EXPRESSION (130)
    on left: 113 114, on right: 114 115 116
CONDITIONAL_EXPRESSION (131)
    on left: 115 116, on right: 116 117 130
ASSIGNMENT_EXPRESSION (132)
    on left: 117 118, on right: 70 71 118 131 132 228
ASSIGNMENT_OPERATOR (133)
    on left: 119 120 121 122 123 124 125 126 127 128 129, on right:
    118
CONSTANT_EXPRESSION (134)
    on left: 130, on right: 17 176 177 185 193 219 220
EXPR (135)
    on left: 131 132, on right: 29 31 32 33 37 38 39 40 41 42 43 44
    45 52 58 63 116 132
DECLARATION (136)
    on left: 133 134, on right: 5 25 26
DECLARATION_SPECIFIERS (137)
    on left: 135 136 137 138 139 140, on right: 6 7 133 134 136 138
    140 207 208 209
INIT_DECLARATOR_LIST (138)
    on left: 141 142, on right: 134 142
INIT_DECLARATOR (139)
    on left: 143 144, on right: 141 142
STORAGE_CLASS_SPECIFIER (140)
    on left: 145 146 147 148 149, on right: 135 136
TYPE_SPECIFIER (141)
    on left: 150 151 152 153 154 155 156 157 158 159 160 161, on right:
    137 138 169 170
STRUCT_OR_UNION_SPECIFIER (142)
    on left: 162 163 164, on right: 159
STRUCT_OR_UNION (143)
    on left: 165, on right: 162 163 164
STRUCT_DECLARATION_LIST (144)
    on left: 166 167, on right: 163 164 167
STRUCT_DECLARATION (145)
    on left: 168, on right: 166 167
SPECIFIER_QUALIFIER_LIST (146)
    on left: 169 170 171 172, on right: 168 170 172 213 214
STRUCT_DECLARATOR_LIST (147)
    on left: 173 174, on right: 168 174
STRUCT_DECLARATOR (148)
    on left: 175 176 177, on right: 173 174
ENUM_SPECIFIER (149)
    on left: 178 179 180, on right: 160
ENUM (150)
    on left: 181, on right: 178 179 180
ENUMERATOR_LIST (151)
    on left: 182 183, on right: 179 180 183
ENUMERATOR (152)
    on left: 184 185, on right: 182 183
ENUM_CONSTANT (153)
    on left: 186, on right: 184 185
TYPE_QUALIFIER (154)
    on left: 187, on right: 139 140 171 172 202 203
DECLARATOR (155)
    on left: 188 189, on right: 6 7 8 9 143 144 175 176 191 207
DIRECT_DECLARATOR (156)
    on left: 190 191 192 193 194 195 196, on right: 188 189 192 193
    194 195 196
POINTER (157)
    on left: 197 198 199 200, on right: 189 199 200 215 216
DEREFERENCE (158)
    on left: 201, on right: 197 198 199 200
TYPE_QUALIFIER_LIST (159)
    on left: 202 203, on right: 198 200 203
PARAMETER_TYPE_LIST (160)
    on left: 204, on right: 194 223 224
PARAMETER_LIST (161)
    on left: 205 206, on right: 204 206
PARAMETER_DECLARATION (162)
    on left: 207 208 209, on right: 205 206
IDENTIFIER_LIST (163)
    on left: 210 211, on right: 196 211
IDENTIFIER (164)
    on left: 212, on right: 16 55 66 67 162 164 178 179 190 210 211
TYPE_NAME (165)
    on left: 213 214, on right: 77 86
ABSTRACT_DECLARATOR (166)
    on left: 215 216 217, on right: 209 214 218
DIRECT_ABSTRACT_DECLARATOR (167)
    on left: 218 219 220 221 222 223 224 225 226, on right: 216 217
    219 221 223 225
TYPEDEF_NAME (168)
    on left: 227, on right: 161
INITIALIZER (169)
    on left: 228 229 230, on right: 144 231 232
INITIALIZER_LIST (170)
    on left: 231 232, on right: 229 230 232


State 0

    0 $accept: . PROGRAM $end

    T_AUTO         shift, and go to state 1
    T_CHAR         shift, and go to state 2
    T_DOUBLE       shift, and go to state 3
    T_ENUM         shift, and go to state 4
    T_EXTERN       shift, and go to state 5
    T_FLOAT        shift, and go to state 6
    T_INT          shift, and go to state 7
    T_LONG         shift, and go to state 8
    T_REGISTER     shift, and go to state 9
    T_SHORT        shift, and go to state 10
    T_SIGNED       shift, and go to state 11
    T_STATIC       shift, and go to state 12
    T_STRUCT       shift, and go to state 13
    T_TYPEDEF      shift, and go to state 14
    T_UNSIGNED     shift, and go to state 15
    T_VOID         shift, and go to state 16
    T_VOLATILE     shift, and go to state 17
    T_LBRACKET     shift, and go to state 18
    T_IDENTIFIER   shift, and go to state 19
    T_DEREFERENCE  shift, and go to state 20
    T_CUSTOM_TYPE  shift, and go to state 21

    PROGRAM                    go to state 22
    TRANSLATION_UNIT           go to state 23
    EXTERNAL_DECLARATION       go to state 24
    FUNCTION_DECLARATION       go to state 25
    DECLARATION                go to state 26
    DECLARATION_SPECIFIERS     go to state 27
    STORAGE_CLASS_SPECIFIER    go to state 28
    TYPE_SPECIFIER             go to state 29
    STRUCT_OR_UNION_SPECIFIER  go to state 30
    STRUCT_OR_UNION            go to state 31
    ENUM_SPECIFIER             go to state 32
    ENUM                       go to state 33
    TYPE_QUALIFIER             go to state 34
    DECLARATOR                 go to state 35
    DIRECT_DECLARATOR          go to state 36
    POINTER                    go to state 37
    DEREFERENCE                go to state 38
    IDENTIFIER                 go to state 39
    TYPEDEF_NAME               go to state 40


State 1

  148 STORAGE_CLASS_SPECIFIER: T_AUTO .

    $default  reduce using rule 148 (STORAGE_CLASS_SPECIFIER)


State 2

  151 TYPE_SPECIFIER: T_CHAR .

    $default  reduce using rule 151 (TYPE_SPECIFIER)


State 3

  156 TYPE_SPECIFIER: T_DOUBLE .

    $default  reduce using rule 156 (TYPE_SPECIFIER)


State 4

  181 ENUM: T_ENUM .

    $default  reduce using rule 181 (ENUM)


State 5

  146 STORAGE_CLASS_SPECIFIER: T_EXTERN .

    $default  reduce using rule 146 (STORAGE_CLASS_SPECIFIER)


State 6

  155 TYPE_SPECIFIER: T_FLOAT .

    $default  reduce using rule 155 (TYPE_SPECIFIER)


State 7

  153 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 153 (TYPE_SPECIFIER)


State 8

  154 TYPE_SPECIFIER: T_LONG .

    $default  reduce using rule 154 (TYPE_SPECIFIER)


State 9

  149 STORAGE_CLASS_SPECIFIER: T_REGISTER .

    $default  reduce using rule 149 (STORAGE_CLASS_SPECIFIER)


State 10

  152 TYPE_SPECIFIER: T_SHORT .

    $default  reduce using rule 152 (TYPE_SPECIFIER)


State 11

  157 TYPE_SPECIFIER: T_SIGNED .

    $default  reduce using rule 157 (TYPE_SPECIFIER)


State 12

  147 STORAGE_CLASS_SPECIFIER: T_STATIC .

    $default  reduce using rule 147 (STORAGE_CLASS_SPECIFIER)


State 13

  165 STRUCT_OR_UNION: T_STRUCT .

    $default  reduce using rule 165 (STRUCT_OR_UNION)


State 14

  145 STORAGE_CLASS_SPECIFIER: T_TYPEDEF .

    $default  reduce using rule 145 (STORAGE_CLASS_SPECIFIER)


State 15

  158 TYPE_SPECIFIER: T_UNSIGNED .

    $default  reduce using rule 158 (TYPE_SPECIFIER)


State 16

  150 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 150 (TYPE_SPECIFIER)


State 17

  187 TYPE_QUALIFIER: T_VOLATILE .

    $default  reduce using rule 187 (TYPE_QUALIFIER)


State 18

  191 DIRECT_DECLARATOR: T_LBRACKET . DECLARATOR T_RBRACKET

    T_LBRACKET     shift, and go to state 18
    T_IDENTIFIER   shift, and go to state 19
    T_DEREFERENCE  shift, and go to state 20

    DECLARATOR         go to state 41
    DIRECT_DECLARATOR  go to state 36
    POINTER            go to state 37
    DEREFERENCE        go to state 38
    IDENTIFIER         go to state 39


State 19

  212 IDENTIFIER: T_IDENTIFIER .

    $default  reduce using rule 212 (IDENTIFIER)


State 20

  201 DEREFERENCE: T_DEREFERENCE .

    $default  reduce using rule 201 (DEREFERENCE)


State 21

  227 TYPEDEF_NAME: T_CUSTOM_TYPE .

    $default  reduce using rule 227 (TYPEDEF_NAME)


State 22

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 42


State 23

    1 PROGRAM: TRANSLATION_UNIT .
    3 TRANSLATION_UNIT: TRANSLATION_UNIT . EXTERNAL_DECLARATION

    T_AUTO         shift, and go to state 1
    T_CHAR         shift, and go to state 2
    T_DOUBLE       shift, and go to state 3
    T_ENUM         shift, and go to state 4
    T_EXTERN       shift, and go to state 5
    T_FLOAT        shift, and go to state 6
    T_INT          shift, and go to state 7
    T_LONG         shift, and go to state 8
    T_REGISTER     shift, and go to state 9
    T_SHORT        shift, and go to state 10
    T_SIGNED       shift, and go to state 11
    T_STATIC       shift, and go to state 12
    T_STRUCT       shift, and go to state 13
    T_TYPEDEF      shift, and go to state 14
    T_UNSIGNED     shift, and go to state 15
    T_VOID         shift, and go to state 16
    T_VOLATILE     shift, and go to state 17
    T_LBRACKET     shift, and go to state 18
    T_IDENTIFIER   shift, and go to state 19
    T_DEREFERENCE  shift, and go to state 20
    T_CUSTOM_TYPE  shift, and go to state 21

    $default  reduce using rule 1 (PROGRAM)
